@@ -1,3 +1,13 @@
+                ._______ _______ __________    .________________
+       ________ |       (_______)      ___/____|_     __       /spot
+       \       \|       |       |      |/       /     |/      /_ 
+.-------\_______________|_______|______________/_______________/-------.
+|                                                                      |
+| V E R S A T I L E   C O M M O D O R E   8 - B I T   E M U L A T O R  |
+|                                                                      |
+`----------------------------------------------------------------------'
+
+
 This is a port of the VICE emulator package to the following AmigaOS flavors:
 
 - AmigaOS4
